# commit-guard

./: .editorconfig  .pre-commit-hooks.yaml  README.md  action.yml  cliff.toml  commit-guard.py  pyproject.toml  ruff.toml  test-rumdl-violations.md
.github/workflows/: coverage-baseline.yml  coverage-comment.yml  lint-commits.yml  lint-md.yml  lint-python.yml  lint-workflows.yml  release.yml  security-audit.yml  test.yml
docs/: index.html
src/commit_guard/: __init__.py
src/git_commit_guard/: __init__.py
tests/: test_git_commit_guard.py
